<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/manage_alarm"
        android:icon="@drawable/manage_alarm"
        android:title="@string/manage_alarm"/>

    <item
        android:id="@+id/timings"
        android:icon="@drawable/show_timing"
        android:title="@string/show_timings"/>

    <item
        android:id="@+id/free_coins"
        android:icon="@drawable/free_coins"
        android:title="@string/free_coins"/>

    <item
        android:id="@+id/share_app"
        android:icon="@drawable/share_icon"
        android:title="@string/share_app"/>

    <item
        android:id="@+id/security_measures"
        android:icon="@drawable/security_measures"
        android:title="@string/security_measures"/>

    <item
        android:id="@+id/language"
        android:icon="@drawable/languages_icon"
        android:title="@string/languages"/>

    <item
        android:id="@+id/feedback"
        android:icon="@drawable/feedback_icon"
        android:title="@string/feedback"/>

    <item
        android:id="@+id/facebook"
        android:icon="@drawable/facebook"
        android:title="@string/facebook"/>

    <item
        android:id="@+id/twitter"
        android:icon="@drawable/twitter_icon"
        android:title="@string/twitter"/>
    <item
        android:id="@+id/instagram"
        android:icon="@drawable/instagram"
        android:title="@string/instagram"/>

    <item
        android:id="@+id/youtube"
        android:icon="@drawable/youtube"
        android:title="@string/youtube"/>

    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout_arrow"
        android:title="@string/log_out"/>


</menu>