<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:padding="5dp"
    android:background="@drawable/dialog_background"
    tools:context=".fragments.LanguageFragment">


    <TextView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/change_language"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <RadioButton
        android:id="@+id/english_lang"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/english"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="30dp"/>

    <RadioButton
        android:id="@+id/hindi_lang"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/hindi"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/change_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_back"
        android:backgroundTint="@color/black"
        android:text="@string/change"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:textAlignment="center"/>



</LinearLayout>