<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAC3C3"
    tools:context=".fragments.InviteFriendsFragment">

    <TextView
        android:id="@+id/txt"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:background="#A3B3EF"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/invite_head"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@id/txt"
        android:layout_margin="10dp"
        android:src="@drawable/verified" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/img1"
        android:text="@string/inviteTxt1"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@id/txt2"
        android:layout_margin="12dp"
        android:src="@drawable/verified" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt2"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/img2"
        android:text="@string/inviteTxt2"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal" />


    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt3"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_white_round"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="Start inviting Now"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/invite_frds"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/invite" />

    </LinearLayout>


</RelativeLayout>