<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/redbackground"
        android:paddingTop="10dp">

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/menu_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/menu_icon" />

            <TextView
                android:id="@+id/username_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/menu_image"
                android:text="Guest User"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/timer"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="4dp"
                android:src="@drawable/alarmclock" />

            <RelativeLayout
                android:id="@+id/relative_wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/timer"
                android:layout_centerHorizontal="true"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/coin_wallet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Coin Wallet"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/coins"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_below="@id/coin_wallet"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="4dp"
                    android:src="@drawable/coins" />

                <TextView
                    android:id="@+id/entry_coins"
                    android:layout_width="21dp"
                    android:layout_height="25dp"
                    android:layout_below="@id/coin_wallet"
                    android:layout_marginLeft="2dp"
                    android:layout_toRightOf="@id/coins"
                    android:text="100"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_free_coins"
                android:layout_width="90dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/back_border"
                android:padding="3dp">

                <TextView
                    android:id="@+id/free_coins_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:text="Get Free Coins"
                    android:textColor="@color/white"
                    android:textSize="10sp" />


                <ImageView
                    android:id="@+id/coins_free"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_toLeftOf="@id/free_coins_text"
                    android:src="@drawable/coins" />


            </RelativeLayout>


        </RelativeLayout>


        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/relative_bottom"
            android:layout_below="@id/nav_view"
            android:layout_margin="5dp" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative"
            android:layout_margin="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            app:itemIconTint="#301F1F"
            app:itemRippleColor="@color/black"
            app:itemTextColor="@color/black"
            app:labelVisibilityMode="selected"
            app:menu="@menu/bottom_nav_menu" />

        <RelativeLayout
            android:id="@+id/relative_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <TextView
                android:id="@+id/recent_winners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/round_text_background"
                android:gravity="center_horizontal"
                android:padding="6dp"
                android:text="@string/recent_winners"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/refer_earn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="22dp"
                android:layout_toRightOf="@id/recent_winners"
                android:background="@drawable/round_text_background"
                android:gravity="center_horizontal"
                android:padding="6dp"
                android:text="@string/refer_earn"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/invite_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="29dp"
                android:layout_toRightOf="@id/refer_earn"
                android:background="@drawable/round_text_background"
                android:gravity="center_horizontal"
                android:padding="6dp"
                android:text="@string/invite_friends"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="normal" />

        </RelativeLayout>


    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/drawer_header"
        app:itemTextAppearance="?android:textAppearanceMedium"
        app:menu="@menu/drawer_nav_menu" />


</androidx.drawerlayout.widget.DrawerLayout>


